--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "firebase-admin": "^11.6.0"
+    "firebase-admin": "^11.6.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.15.11",
     "typescript": "^5.0.4"
   }
